# cube_solver

./: cube.py
v1/: README.md  cube.py
v2/: README.md  pyproject.toml
v2/cubev2/: CUBESTATE.md  cube.py  main.py
